# glee

./: CMakeLists.txt  ctl  glee.3.man  readme.md
debian/: control
doc/: dev.txt  index.txt  usage.txt
include/glee/: api.hpp  database.hpp  file_scan.hpp  media_dir_table.hpp  media_file_iterator.hpp  media_file_table.hpp
include/glee_cmd/: api.hpp  dir.hpp  file.hpp  master.hpp
include/gui_glee/: api.hpp  main_window.hpp  windows.hpp
src/: CMakeLists.txt
src/exe/: example.cpp  glee.cpp  glee_dir.cpp  glee_file.cpp  glee_gui.cpp  glee_master.cpp
src/glee_cmd/: api.cpp  dir.cpp  file.cpp  master.cpp
src/glee_core/: api.cpp  database.cpp  fs.cpp  media_dir_table.cpp  media_file_table.cpp
src/gui_glee/: api.cpp  file_explorer_tab.cpp  main_window.cpp  setting_tab.cpp
src/xglee/: api.cpp  file_scan.cpp  media_file_iterator.cpp
